--- a/src/component/deleteAllTasksBtn/style.module.css
+++ b/src/component/deleteAllTasksBtn/style.module.css
@@ -1,12 +1,17 @@
 .wrapper {
-  margin-top: 10px;
+  margin: 10px 0;
   width: 100%;
   padding: 5px;
 }
 
-.wrapper button {
+.btn {
   width: 100%;
   border-radius: 10px;
   border: none;
   cursor: pointer;
+}
+
+.btn:hover {
+  background-color: rgba(241, 20, 20, 0.623);
+  color: white;
 }
