--- a/src/component/deleteAllTasksBtn/style.module.css
+++ b/src/component/deleteAllTasksBtn/style.module.css
@@ -1,3 +1,6 @@
+
+@import '~antd/dist/antd.css';
+
 .wrapper {
   margin: 10px 0;
   width: 100%;
@@ -9,9 +12,11 @@
   border-radius: 10px;
   border: none;
   cursor: pointer;
+  transition: 0.5s;
 }
 
 .btn:hover {
   background-color: rgba(241, 20, 20, 0.623);
   color: white;
 }
+
