--- a/src/component/taskOptionsBtn/style.module.css
+++ b/src/component/taskOptionsBtn/style.module.css
@@ -1,3 +1,5 @@
+@import '~antd/dist/antd.css';
+
 .wrapper {
   display: flex;
   justify-content: space-between;
@@ -10,6 +12,7 @@
   border: none;
   cursor: pointer;
   border-radius: 5px;
+  transition: 0.5s;
 }
 
 .btn:hover {
